# cpp_yaml_exmpl

./: CMakeLists.txt  cppcheck_report.txt  example.yml  main.cpp  yaml_parce.cpp
.github/workflows/: Static_analysis.yml  cmake.yml
src/: main.cpp  yaml_parce.cpp  yaml_parse.cpp
src/include/: types.h  yaml_parse.h
tests/: yaml_parse_test.cpp
